# OmniGraph-RAG

./: Readme.md
Project/: .gitignore  greenlet-3.0.3-cp39-cp39-win_amd64.whl  pyproject.toml  requirements.txt  test_mock.py  tmp_import_check.py
Project/api/: main.py
Project/core/: config.py  exceptions.py  state.py
Project/drift/: __init__.py  context_merger.py  engine.py  subquery_planner.py
Project/graph/: __init__.py  driver.py  indexes.py
Project/omni_graph_rag/: __init__.py  architecture.md  drift.py  neo4j_client.py  router.py
Project/omnigraph_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Project/pipeline/: __init__.py  graph.py
Project/retrieval/: __init__.py  fact_verifier.py  graph_expansion.py  local_search.py
Project/routing/: __init__.py  classifier.py  router.py  taxonomy.py
Project/synthesis/: __init__.py  generator.py  prompt_builder.py
Project/tests/: __init__.py  test_routing.py  test_synthesis.py
